# ap_secondMS

./: AStarPriQue.h  A_Star.h  Astar.h  BFS.h  BestFS.h  Breadth_First_Search.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  Cell.h  DFS.h  FileCacheManager.cpp  FileCacheManager.h  MatrixSolver.h  MyException.h  MySerialServer.cpp  MySerialServer.h  PStatePriQue.h  PStateUnorderedSet.h  Searchable.h  SearchableHeuristic.h  SearchableHeuristicMatrix.cpp  SearchableMatrix.cpp  SearchableMatrix.h  Searcher.h  Server.h  Solver.cpp  Solver.h  State.h  StatePriQue.h  StringReverser.cpp  StringReverser.h  main.cpp
Algorithms/: AStarPriQue.h  Astar.h  BFS.h  BestFS.h  Cell.h  DFS.h  Searchable.h  SearchableHeuristic.h  SearchableHeuristicMatrix.cpp  SearchableHeuristicMatrix.h  SearchableMatrix.cpp  SearchableMatrix.h  Searcher.h  SearcherHeuristic.h  State.h
Etc/: Utils.cpp  Utils.h
Server Client/: BaseClientHandler.h  Boot.cpp  Boot.h  ClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  TCP_client.cpp  TCP_client.h  TCP_server.cpp  TCP_server.h  TCP_socket.h  Try.h  tryServ.h
Solver And Cacher/: CacheManager.h  FileCacheManager.cpp  FileCacheManager.h  MatrixSolver.cpp  MatrixSolver.h  Solver.h  StringReverser.cpp  StringReverser.h
